Recuperando dados do formulário via bodyParser

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -8,5 +8,17 @@
 </head>
 <body>
 	<h1>Adicionar notícia</h1>
+	<br>
+
+	<form action="/noticias/salvar" method="post">
+		<label for="">Título</label>
+		<input type="text" id="titulo" name="titulo" placeholder="Título da notícia">
+		<br>
+		<label for="">Notícia</label>
+		<textarea name="noticia" id="noticia" rows="5" cols="30"></textarea>
+		<br>
+		<input type="submit" value="Enviar">
+	</form>
+
 </body>
 </html>
