--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -11,6 +11,17 @@
 	<h1>Adicionar notícia</h1>
 	<br>
 
+	<% if(validacao) { %>
+		<u>
+			<% for(var i = 0; i < validacao.length; i++) { %>
+				<li>
+					<%= validacao[i].msg %>
+				</li>
+			<% } %>
+		</u>
+	<% } %>
+
+
 	<form action="/noticias/salvar" method="post">
 		<label for="">Título</label>
 		<input type="text" id="titulo" name="titulo" placeholder="Título da notícia">
