Manter dados do form preenchidos mesmo após validação

--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -24,23 +24,24 @@
 
 	<form action="/noticias/salvar" method="post">
 		<label for="">Título</label>
-		<input type="text" id="titulo" name="titulo" placeholder="Título da notícia">
+		<!-- passamos o value para o campos já se auto preencherem com os valores antigos -->
+		<input type="text" id="titulo" name="titulo" value="<%=noticia.titulo%>" placeholder="Título da notícia">
 		<br>
 
 		<label for="">Resumo</label>
-		<input type="text" id="resumo" name="resumo" placeholder="Resumo da notícia">
+		<input type="text" id="resumo" name="resumo" value="<%=noticia.resumo%>" placeholder="Resumo da notícia">
 		<br>
 
 		<label for="">Nome autor</label>
-		<input type="text" id="autor" name="autor" placeholder="Autor da notícia">
+		<input type="text" id="autor" name="autor" value="<%=noticia.autor%>" placeholder="Autor da notícia">
 		<br>
 
 		<label for="">Data dos fatos</label>
-		<input type="date" id="data_noticia" name="data_noticia" placeholder="Data da notícia">
+		<input type="date" id="data_noticia" name="data_noticia" value="<%=noticia.data_noticia%>" placeholder="Data da notícia">
 		<br>
 
 		<label for="">Notícia</label>
-		<textarea name="noticia" id="noticia" rows="5" cols="30"></textarea>
+		<textarea name="noticia" id="noticia" value="<%=noticia.noticia%>"rows="5" cols="30"></textarea>
 		<br>
 		<input type="submit" value="Enviar">
 	</form>
