--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -1,156 +1,102 @@
-
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Formulário de cadastro de Notícia</title>
-</head>
-<body>
-	<h1>Adicionar notícia</h1>
-	<br>
+	<head>
+		<meta charset="UTF-8">
 
-	<% if(validacao) { %>
-		<u>
-			<% for(var i = 0; i < validacao.length; i++) { %>
-				<li>
-					<%= validacao[i].msg %>
-				</li>
-			<% } %>
-		</u>
-	<% } %>
+		<title>Portal de notícias</title>
+		
+		<!-- JQuery -->
+		<script src="js/jquery-2.2.1.js"></script>
 
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+		<!-- incluindo css -->
+		<link href="css/style.css" rel="stylesheet">
 
-	<form action="/noticias/salvar" method="post">
-		<label for="">Título</label>
-		<!-- passamos o value para o campos já se auto preencherem com os valores antigos -->
-		<input type="text" id="titulo" name="titulo" value="<%=noticia.titulo%>" placeholder="Título da notícia">
-		<br>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
 
-		<label for="">Resumo</label>
-		<input type="text" id="resumo" name="resumo" value="<%=noticia.resumo%>" placeholder="Resumo da notícia">
-		<br>
+	<body>
 
-		<label for="">Nome autor</label>
-		<input type="text" id="autor" name="autor" value="<%=noticia.autor%>" placeholder="Autor da notícia">
-		<br>
-
-		<label for="">Data dos fatos</label>
-		<input type="date" id="data_noticia" name="data_noticia" value="<%=noticia.data_noticia%>" placeholder="Data da notícia">
-		<br>
-
-		<label for="">Notícia</label>
-		<textarea name="noticia" id="noticia" value="<%=noticia.noticia%>"rows="5" cols="30"></textarea>
-		<br>
-		<input type="submit" value="Enviar">
-	</form>
-
-</body>
-</html>
-<!--
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<title>Formulário de cadastro de Notícia</title>
-
-	<style>
-		@import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
-		.login-block{
-			background: #DE6262;  /* fallback for old browsers */
-		background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
-		background: linear-gradient(to bottom, #FFB88C, #DE6262); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-		float:left;
-		width:100%;
-		padding : 50px 0;
-		}
-		.banner-sec{background:url(https://static.pexels.com/photos/33972/pexels-photo.jpg)  no-repeat left bottom; background-size:cover; min-height:500px; border-radius: 0 10px 10px 0; padding:0;}
-		.container{background:#fff; border-radius: 10px; box-shadow:15px 20px 0px rgba(0,0,0,0.1);}
-		.carousel-inner{border-radius:0 10px 10px 0;}
-		.carousel-caption{text-align:left; left:5%;}
-		.login-sec{padding: 50px 30px; position:relative;}
-		.login-sec .copy-text{position:absolute; width:80%; bottom:20px; font-size:13px; text-align:center;}
-		.login-sec .copy-text i{color:#FEB58A;}
-		.login-sec .copy-text a{color:#E36262;}
-		.login-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #DE6262;}
-		.login-sec h2:after{content:" "; width:100px; height:5px; background:#FEB58A; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
-		.btn-login{background: #DE6262; color:#fff; font-weight:600;}
-		.banner-text{width:70%; position:absolute; bottom:40px; padding-left:20px;}
-		.banner-text h2{color:#fff; font-weight:600;}
-		.banner-text h2:after{content:" "; width:100px; height:5px; background:#FFF; display:block; margin-top:20px; border-radius:3px;}
-		.banner-text p{color:#fff;}
-	</style>
-
-</head>
-<body>
-		<section class="login-block">
-				<div class="container">
-				<div class="row">
-					<div class="col-md-4 login-sec">
-						<h2 class="text-center">Insira sua notícia</h2>
-				<form action="/noticias/salvar" method="post" class="login-form">
-
-			  <div class="form-group">
-				<label for="exampleInputEmail1" class="text-uppercase">Título</label>
-				<input type="text" class="form-control" id="titulo" name="titulo" placeholder="Título da notícia">
-				
-			  </div>
-			  <div class="form-group">
-				<label for="exampleInputPassword1" class="text-uppercase">Notícia</label>
-				<textarea name="noticia" id="noticia" rows="5" cols="30"  class="form-control"></textarea>
-			  </div>
-			  
-				<div class="form-check">
-				<button type="submit" class="btn btn-login float-right">Submit</button>
-			  </div>
-			  
-			</form>
-					</div>
-					<div class="col-md-8 banner-sec">
-						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-							 <ol class="carousel-indicators">
-								<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-								<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-							  </ol>
-						<div class="carousel-inner" role="listbox">
-				<div class="carousel-item active">
-				  <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
-				  <div class="carousel-caption d-none d-md-block">
-					<div class="banner-text">
-						<h2>This is Heaven</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-					</div>	
-			  </div>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<img src="images/logo.png" />
 				</div>
-				<div class="carousel-item">
-				  <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg" alt="First slide">
-				  <div class="carousel-caption d-none d-md-block">
-					<div class="banner-text">
-						<h2>This is Heaven</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-					</div>	
+
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html">HOME</a></li>
+					</ul>
 				</div>
-				</div>
-				<div class="carousel-item">
-				  <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg" alt="First slide">
-				  <div class="carousel-caption d-none d-md-block">
-					<div class="banner-text">
-						<h2>This is Heaven</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-					</div>	
-				</div>
-			  </div>
-					</div>	   
+			</div>
+		</nav>
+
+
+	    <div class="container">
+		 
+
+		<% if(validacao.length > 0) { %>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="alert alert-danger">
+						<strong>Atenção!</strong>
+						<ul>
+							<!-- pecorrer os erros -->
+							<% for(var i = 0; i < validacao.length; i++) { %>
+								<li> <%= validacao[i].msg %> </li>
+							<% } %> <!-- end for -->
+						</ul>
 					</div>
 				</div>
 			</div>
-			</section>
-</body>
-</html> -->
+
+		<% } %> <!-- end if -->
+	    	<div class="row">
+	    		<div class="col-md-12">
+	    			<form action="/noticias/salvar" method="POST">
+						<div class="form-group">
+							<label for="titulo">Título:</label>
+							<input type="text" class="form-control" id="titulo" name="titulo">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Resumo:</label>
+							<input type="text" class="form-control" id="resumo" name="resumo">
+						</div>
+						
+						<div class="form-group">
+							<label for="pwd">Autor:</label>
+							<input type="text" class="form-control" id="autor" name="autor">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Data:</label>
+							<input type="date" class="form-control" id="data_noticia" name="data_noticia">
+						</div>
+
+						<div class="form-group">
+							<label for="pwd">Notícia:</label>
+							<textarea class="form-control" id="noticia" name="noticia"></textarea>
+						</div>
+
+
+						<button type="submit" class="btn btn-default">Cadastrar</button>
+						</form>
+		    	</div>
+	    	</div>
+	    </div>
+	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+	</body>
+</html>
