--- a/app/views/noticias/noticias.ejs
+++ b/app/views/noticias/noticias.ejs
@@ -1,35 +1,70 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="pt-br">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Notícias</title>
-</head>
-<body>
-	<h1>Notícias</h1>
+	<head>
+		<meta charset="UTF-8">
 
-	<table>
-		<tr>
-			<td>ID</td>
-			<td>Título</td>
-			<td>Notícia</td>
-		</tr>
+		<title>Portal de notícias</title>
+		
+		<!-- JQuery -->
+		<script src="js/jquery-2.2.1.js"></script>
 
-		<!-- será interpretado pelo JavaScript -->
-		<% for(var i=0; i < noticias.length; i++) { %>
+		<!-- bootstrap - link cdn -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+		<!-- incluindo css -->
+		<link href="css/style.css" rel="stylesheet">
 
-		<!-- = serve para imprimir o valor na tela -->
-		<tr>
-			<td><%= noticias[i].id_noticias	 %></td>
-			<td><%= noticias[i].titulo	     %></td>
-			<td><%= noticias[i].noticia 	 %></td>
-		</tr>
+		<!-- favicon -->
+		<link rel="shortcut icon" href="images/favicon.ico" />
+	</head>
 
-		<% } %>
+	<body>
+
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					
+					<img src="images/logo.png" />
+				</div>
+
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html">HOME</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 
 
-	</table>
+	    <div class="container">
 
-</body>
+			<!-- caso existir notícias -->
+			<% if(noticias.length > 0) { %>
+				<% for(var i = 0; i < noticias.length; i++) { %>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="noticia_wrapper">
+							<span class="noticia_autor"><%=noticias[i].autor%></span>
+							<a href="noticia?id_noticias=<%=noticias[i].id_noticias%>" class="noticia_titulo"><%=noticias[i].titulo%></a>
+							<span class="noticia_data"><%=noticias[i].data_noticia%></span>
+							<br />
+							<p class="noticia_resumo">
+								<%=noticias[i].resumo%>
+							</p>
+						</div>
+					</div>
+				</div>
+				<%  } %> <!-- end for -->
+			<% } %> <!-- end if -->
+	    </div>
+	
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+	</body>
 </html>
